syntax = "proto3";

package proto.identityhub.v1;

option go_package = "github.com/getzion/relay/gen/identityhub/v1";

import "proto/identityhub/v1/requests.proto";
import "proto/identityhub/v1/responses.proto";

/**
 * The Permissions interface provides a mechanism for external entities to request
 * access to a Hub Userâ€™s non-public data.
 * https://identity.foundation/identity-hub/spec/#permissions
 */

service PermissionsService {
  rpc PermissionsRequest(PermissionsRequestRequest) returns (PermissionsRequestResponse) {}
  rpc PermissionsQuery(PermissionsQueryRequest) returns (PermissionsQueryResponse) {}
  rpc PermissionsGrant(PermissionsGrantRequest) returns (PermissionsGrantResponse) {}
  rpc PermissionsRevoke(PermissionsRevokeRequest) returns (PermissionsRevokeResponse) {}
}

message PermissionsRequestRequest {
  Request request = 1;
}
message PermissionsRequestResponse {
  Response response = 1;
}

message PermissionsQueryRequest {
  Request request = 1;
}
message PermissionsQueryResponse {
  Response response = 1;
}

message PermissionsGrantRequest {
  Request request = 1;
}
message PermissionsGrantResponse {
  Response response = 1;
}

message PermissionsRevokeRequest {
  Request request = 1;
}
message PermissionsRevokeResponse {
  Response response = 1;
}
